Version 1.11.1 (2022-07-27)

   - Refactored event rate distributions into Process instead of Dynamics
   - Added per-edge infection variant of SIR
   - Added a global random number generator to simplify replacement if needed
   - Further documented event taps and dynamics
   - Automated GitHub releases and Zenodo DOIs for each release

Version 1.10.1 (2022-07-21)

   - Added un-posting of posted events
   - Changed StochasticDynamics to continue to run posted events even
     after stochastic events become exhausted (rather than discarding
     un-fired posted events). It remains the case that equilibrium overrides
     posting
   - Refactored event taps API to iunclude the process raising the event
   - Added documentation cross-links to epydemic-signals as an example of
     event taps
   - Fixed times for execution of posted events
   - Added test for removal of elements from loci when processing events
     under synchronous dynamics

Version 1.9.3 (2022-03-27)

   - Fixed another bug in SynchronousDynamics
   - Added explanation of the two different Dynamics classes

Version 1.9.2 (2022-03-22)

   - Fixed bug in process sequences under synchronous dynamics
   - Refactored event rates calculations to not be per-process

Version 1.9.1 (2022-03-08)

   - Refactored event taps to be more general
   - Added events and new query methods to the Newman-Ziff percolation processes
   - Changed the way Newman-Ziff results are returned in notebooks
   - Added named sub-processes in process sequences
   - Reformulated tutorial to avoid some confusions
   - Added recipe on percolation

Version 1.8.1 (2022-01-26)

   - Added recording of first hitting time for nodes
   - Added options to CompartmentedMode.markOccupied() and CompartmentedModel.markHit()
     to only record the first occupation and hitting times respectively,
     and to ignore subsequent re-transmission or -infection
   - Added tests to make sure epidemics happen (when they should) on a per-model